--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Across Media - Secure Portal</title>
@@ -8,19 +9,26 @@
     <meta name="author" content="Across Media" />
 
     <!-- Security Headers -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' http://localhost:3001;">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
-    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
-    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self';
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src 'self' https://fonts.gstatic.com;
+      img-src 'self' data: https:;
+      connect-src 'self' http://localhost:3001 https://www.youtube.com;
+      frame-src 'self' https://www.youtube.com;
+    " />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
 
-    <!-- OpenGraph -->
+    <!-- OpenGraph Meta -->
     <meta property="og:title" content="Across Media - Secure Portal" />
     <meta property="og:description" content="Secure Admin Portal for Across Media" />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter -->
+    <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Across Media - Secure Portal" />
   </head>
